[package]
name = "formatter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tokenizer" = { path = "../tokenizer" }

[dev-dependencies]
walkdir = "2.4.0"
rayon = "1.8.0"